# glance2

./: README.md
backend/: .gitignore  pyproject.toml  server.py
backend/jupyter_notebooks/: pdf_reading.ipynb  transactions_processing.ipynb
backend/src/: app.py  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: transaction_models.py  transactions.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/add-transaction/: AddTransaction.tsx  BulkAddTransactions.tsx  TwoAddTransactions.tsx
frontend/src/auth/: ClerkProviderWithRoutes.tsx
frontend/src/dashboard/: Dashboard.tsx
frontend/src/edit-transactions/: EditTransactions.tsx
frontend/src/history/: TransactionHistory.tsx
frontend/src/layout/: Layout.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/utils/: api.ts  utils.ts
frontend_backup (no shadcn)/: .env  bun.lockb
frontend_backup (no shadcn)/src/: App.css  App.tsx
frontend_backup (no shadcn)/src/auth/: AuthenticationPage.tsx
frontend_backup (no shadcn)/src/dashboard/: Dashboard.tsx
frontend_backup (no shadcn)/src/layout/: Layout.tsx
