[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "clerk-backend-api>=3.3.1",
    "fastapi>=0.119.1",
    "fastapi-swagger-dark>=0.0.7",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
